docs/apache-airflow-providers-google/8.11.0/_sources/_api/airflow/providers/google/cloud/sensors/bigquery/index.rst.txt
:py:mod:`airflow.providers.google.cloud.sensors.bigquery`
=========================================================

.. py:module:: airflow.providers.google.cloud.sensors.bigquery

.. autoapi-nested-parse::

   This module contains Google BigQuery sensors.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.sensors.bigquery.BigQueryTableExistenceSensor
   airflow.providers.google.cloud.sensors.bigquery.BigQueryTablePartitionExistenceSensor
   airflow.providers.google.cloud.sensors.bigquery.BigQueryTableExistenceAsyncSensor
   airflow.providers.google.cloud.sensors.bigquery.BigQueryTableExistencePartitionAsyncSensor




.. py:class:: BigQueryTableExistenceSensor(*, project_id, dataset_id, table_id, gcp_conn_id = 'google_cloud_default', delegate_to = None, impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Checks for the existence of a table in Google Bigquery.

   :param project_id: The Google cloud project in which to look for the table.
       The connection supplied to the hook must provide
       access to the specified project.
   :param dataset_id: The name of the dataset in which to look for the table.
       storage bucket.
   :param table_id: The name of the table to check the existence of.
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param delegate_to: The account to impersonate using domain-wide delegation of authority,
       if any. For this to work, the service account making the request must have
       domain-wide delegation enabled.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).

   .. py:attribute:: template_fields
      :type: Sequence[str]
      :value: ('project_id', 'dataset_id', 'table_id', 'impersonation_chain')

      

   .. py:attribute:: ui_color
      :value: '#f0eee4'

      

   .. py:method:: poke(context)

      Function defined by the sensors while deriving this class should override.



.. py:class:: BigQueryTablePartitionExistenceSensor(*, project_id, dataset_id, table_id, partition_id, gcp_conn_id = 'google_cloud_default', delegate_to = None, impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.sensors.base.BaseSensorOperator`

   Checks for the existence of a partition within a table in Google Bigquery.

   :param project_id: The Google cloud project in which to look for the table.
       The connection supplied to the hook must provide
       access to the specified project.
   :param dataset_id: The name of the dataset in which to look for the table.
       storage bucket.
   :param table_id: The name of the table to check the existence of.
   :param partition_id: The name of the partition to check the existence of.
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google Cloud.
   :param delegate_to: The account to impersonate, if any.
       For this to work, the service account making the request must
       have domain-wide delegation enabled.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).

   .. py:attribute:: template_fields
      :type: Sequence[str]
      :value: ('project_id', 'dataset_id', 'table_id', 'partition_id', 'impersonation_chain')

      

   .. py:attribute:: ui_color
      :value: '#f0eee4'

      

   .. py:method:: poke(context)

      Function defined by the sensors while deriving this class should override.



.. py:class:: BigQueryTableExistenceAsyncSensor(gcp_conn_id = 'google_cloud_default', polling_interval = 5.0, **kwargs)

   Bases: :py:obj:`BigQueryTableExistenceSensor`

   Checks for the existence of a table in Google Big Query.

   :param project_id: The Google cloud project in which to look for the table.
      The connection supplied to the hook must provide
      access to the specified project.
   :param dataset_id: The name of the dataset in which to look for the table.
      storage bucket.
   :param table_id: The name of the table to check the existence of.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param bigquery_conn_id: (Deprecated) The connection ID used to connect to Google Cloud.
      This parameter has been deprecated. You should pass the gcp_conn_id parameter instead.
   :param delegate_to: The account to impersonate using domain-wide delegation of authority,
      if any. For this to work, the service account making the request must have
      domain-wide delegation enabled.
   :param impersonation_chain: Optional service account to impersonate using short-term
      credentials, or chained list of accounts required to get the access_token
      of the last account in the list, which will be impersonated in the request.
      If set as a string, the account must grant the originating account
      the Service Account Token Creator IAM role.
      If set as a sequence, the identities from the list must grant
      Service Account Token Creator IAM role to the directly preceding identity, with first
      account from the list granting this role to the originating account (templated).
   :param polling_interval: The interval in seconds to wait between checks table existence.

   .. py:method:: execute(context)

      Airflow runs this method on the worker and defers using the trigger.


   .. py:method:: execute_complete(context, event = None)

      Callback for when the trigger fires - returns immediately.
      Relies on trigger to throw an exception, otherwise it assumes execution was
      successful.



.. py:class:: BigQueryTableExistencePartitionAsyncSensor(poke_interval = 5, **kwargs)

   Bases: :py:obj:`BigQueryTablePartitionExistenceSensor`

   Checks for the existence of a partition within a table in Google BigQuery.

   :param project_id: The Google cloud project in which to look for the table.
      The connection supplied to the hook must provide
      access to the specified project.
   :param dataset_id: The name of the dataset in which to look for the table.
      storage bucket.
   :param partition_id: The name of the partition to check the existence of.
   :param table_id: The name of the table to check the existence of.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param bigquery_conn_id: (Deprecated) The connection ID used to connect to Google Cloud.
      This parameter has been deprecated. You should pass the gcp_conn_id parameter instead.
   :param impersonation_chain: Optional service account to impersonate using short-term
      credentials, or chained list of accounts required to get the access_token
      of the last account in the list, which will be impersonated in the request.
      If set as a string, the account must grant the originating account
      the Service Account Token Creator IAM role.
      If set as a sequence, the identities from the list must grant
      Service Account Token Creator IAM role to the directly preceding identity, with first
      account from the list granting this role to the originating account (templated).
   :param poke_interval: The interval in seconds to wait between checks table existence.

   .. py:method:: execute(context)

      Airflow runs this method on the worker and defers using the trigger.


   .. py:method:: execute_complete(context, event = None)

      Callback for when the trigger fires - returns immediately.
      Relies on trigger to throw an exception, otherwise it assumes execution was
      successful.



